# tiny-chat

./: README.md
server/: Cargo.toml  Dockerfile  emoji_map.json
server/migrations/2022-05-03-074156_create_users/: down.sql  up.sql
server/migrations/2022-05-05-134313_add_is_online_to_users/: down.sql  up.sql
server/migrations/2022-05-05-134332_add_last_online_at_to_users/: down.sql  up.sql
server/migrations/2022-05-07-024949_create_conversations/: down.sql  up.sql
server/migrations/2022-05-07-030058_create_members/: down.sql  up.sql
server/migrations/2022-05-07-031213_create_messages;/: down.sql  up.sql
server/migrations/2022-05-08-092907_replace_type_with_is_group_in_conversations/: down.sql  up.sql
server/migrations/2022-05-16-135949_add_with_to_conversations/: down.sql  up.sql
server/migrations/2022-05-16-161846_replace_with_with_withs_in_conversations/: down.sql  up.sql
server/migrations/2022-05-17-112823_add_reactions_to_messages/: down.sql  up.sql
server/migrations/2022-05-19-155831_add_account_type_and_google_id_to_users/: down.sql  up.sql
server/migrations/2022-05-22-121803_add_is_image_to_messages/: down.sql  up.sql
server/migrations/2022-05-22-121937_add_avatar_url_to_users/: down.sql  up.sql
server/src/: lib.rs  main.rs  schema.rs  socket_session.rs  ws_server.rs
server/src/models/: auth.rs  conversation.rs  member.rs  message.rs  mod.rs  pagination.rs  user.rs
server/src/route/: auth.rs  conversation.rs  message.rs  mod.rs  user.rs
web/: index.html  package.json  tailwind.config.js
web/src/: App.tsx  Routes.tsx  index.css
(+72 files in other folders)
